--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="">
-  <head>
+<html lang="" style="height: 100%;">
+<head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>一页</title>
-  </head>
-  <body>
-    <div id="app"></div>
+</head>
+<body style="height: 100%;margin: 0">
+    <div id="app" style="height: 100%;"></div>
     <script type="module" src="/src/main.js"></script>
-  </body>
+</body>
 </html>
